tests/specs/check/wasm_multi_value/check.out
Check [WILDCARD]main.ts
TS2322 [ERROR]: Type '[number, number]' is not assignable to type 'string'.
const result: string = add_and_sub(1, 2);
      ~~~~~~
    at file:///[WILDLINE]/main.ts:3:7

error: Type checking failed.
